--- a/TicketHub/TicketHub.csproj
+++ b/TicketHub/TicketHub.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c282dc65-99b9-425a-91fb-04c117aaf106</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
